Added Portfolio Link
Added Portfolio link

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
       <div>
           <h1>Lydia Riddell</h1>                 
           <p>Currently doing some stuff at <a class="plain" href="https://twitter.com/marvelapp" target="_blank">@marvelapp</a>.</p>
+          <a href="https://marvelapp.com/8a7fjf6" target="_blank">👩‍🎨 Portfolio</a><br>
           <a href="https://twitter.com/lydiariddell" target="_blank">🐧 Twitter</a><br>
           <a href="mailto:lydiariddell94@gmail.com?Subject=Lets build 👷‍">📧 Email</a>
+
       </div>
   </wrapper>
 </body>
