--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </logo>
       <div>
           <h1>Lydia Riddell</h1>                 
-          <p>Currently doing some stuff at <a class="plain" href="https://twitter.com/marvelapp" target="_blank">@marvelapp</a>.</p>
+          <p>Currently doing some stuff at <a class="plain" href="https://twitter.com/deliveroodesign" target="_blank">@DeliverooDesign</a>.</p>
           <a href="https://marvelapp.com/8a7fjf6" target="_blank">👩‍🎨 Portfolio</a><br>
           <a href="https://twitter.com/lydiariddell" target="_blank">🐧 Twitter</a><br>
           <a href="mailto:lydiariddell94@gmail.com?Subject=Lets build 👷‍">📧 Email</a>
