Email subject line update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <head>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -37,7 +37,7 @@
           <p>Currently doing some stuff at <a class="plain" href="https://twitter.com/deliveroodesign" target="_blank">@DeliverooDesign</a>.</p>
           <a href="https://marvelapp.com/8a7fjf6" target="_blank">👩‍🎨 Portfolio</a><br>
           <a href="https://twitter.com/lydiariddell" target="_blank">🐧 Twitter</a><br>
-          <a href="mailto:lydiariddell94@gmail.com?Subject=Lets build 👷‍">📧 Email</a>
+          <a href="mailto:lydiariddell94@gmail.com?Subject=👋">📧 Email</a>
 
       </div>
   </wrapper>
